# HGraphML

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/images/: quotients.xml
docs/api_notes/: 01_001_first_surfaces.md
docs/design/: 01_001_lifting_strategies_for_hierarchical_graph_message_passing.md  01_002_hgraphml_first_import_blueprint.md  01_003_hgraphml_first_import_implementation_gameplan.md  01_004_hgraphml_first_import_implementation_log.md
docs/design/public_release_audit/: 01_001_lightweight_research_public_release_readiness_audit.md  01_002_security_and_local_path_public_release_audit.md
docs/design/tensorization/: 01_005_hgraphml_state_collapser_tensorization_followup_instructions.md  01_006_state_collapser_encoding_compatibility_blueprint.md  01_007_state_collapser_encoding_compatibility_implementation_gameplan.md  01_008_state_collapser_encoding_compatibility_implementation_log.md
docs/engineer_continuity/2026/05/21/: 01_001_init.md
docs/engineer_continuity/2026/05/25/: 01_002_hgraphml_first_import_public_beta_and_state_collapser_dependency.md
docs/usage/: 01_001_first_hack.md
src/hgraphml/: __init__.py  collapse.py
src/hgraphml/adapters/: __init__.py  state_collapser.py
src/hgraphml/diagnostics/: __init__.py  gradients.py  viability.py
src/hgraphml/examples/: __init__.py  learned_lift_demo.py  toy_graphs.py
src/hgraphml/graph/: __init__.py  data.py  fibers.py  tower_adapter.py
src/hgraphml/lifts/: __init__.py  base.py  fiber_normalized.py  learned.py  uniform.py
src/hgraphml/messages/: __init__.py  containers.py  passing.py  readout.py
src/hgraphml/training/: __init__.py  objectives.py  train_step.py
tests/: test_collapse.py  test_package.py
tests/adapters/: test_state_collapser_adapter.py  test_state_collapser_encoding_registry_compatibility.py
tests/diagnostics/: test_gradients.py  test_viability.py
tests/examples/: test_learned_lift_demo.py  test_toy_graphs.py
tests/graph/: test_data.py  test_fibers.py
tests/lifts/: test_fiber_normalized.py  test_learned.py  test_uniform.py
tests/messages/: test_containers.py  test_passing.py  test_readout.py
tests/training/: test_objectives.py  test_train_step.py
