[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hgraphml"
version = "0.1.0"
description = "Hierarchical graph message passing with state_collapser quotient towers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Tyler Foster" },
]
dependencies = [
  "state-collapser>=0.5.0",
  "torch>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.uv.sources]
state-collapser = { path = "../state_collapser", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/hgraphml"]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--strict-config",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["hgraphml"]

[dependency-groups]
dev = [
    "numpy>=2.4.6",
]
