[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hgraphml"
version = "0.1.0"
description = "Hierarchical graph message passing with state_collapser quotient towers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Tyler Foster" },
]
keywords = [
  "graph-ml",
  "message-passing",
  "hierarchical",
  "quotient-graph",
  "state-collapser",
  "pytorch",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "state-collapser @ git+https://github.com/TYLERSFOSTER/state_collapser.git@v0.5.0",
  "torch>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/TYLERSFOSTER/HGraphML"
Repository = "https://github.com/TYLERSFOSTER/HGraphML"
Issues = "https://github.com/TYLERSFOSTER/HGraphML/issues"
Changelog = "https://github.com/TYLERSFOSTER/HGraphML/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hgraphml"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--strict-config",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["hgraphml"]

[dependency-groups]
dev = [
    "numpy>=2.4.6",
]
